--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/chat?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/product?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=netbean
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
